name:                tlaplus-qq
version:             0.1

license:             MIT
license-file:        LICENSE

author:              Reto Kramer <kramer@acm.org>
maintainer:          kramer@acm.org
stability:           experimental
synopsis:            Quasiquoter for TLA+
category:            Language
description:
  Library to facilitate TLA+ processing in Haskell.
  For TLA+ information, please refer to http://www.lamport.org

build-type:          Simple
cabal-version:       >= 1.8

library
  exposed-modules:   Language.TLAPlus.Quasiquote
  build-depends:     base >= 4, syb, containers, wl-pprint,
                     template-haskell,
                     tlaplus,
                     parsec,
                     mtl
  hs-source-dirs:    src
  ghc-options:       -Wall
                     -fwarn-tabs
                     -fno-warn-name-shadowing
                     -fno-warn-missing-signatures
                     -fno-warn-unused-matches
                     -fno-warn-unused-imports
