name:                tlaplus-swimlane
version:             0.1

license:             BSD3
license-file:        LICENSE

author:              Reto Kramer <kramer@acm.org>
maintainer:          kramer@acm.org
stability:           experimental
synopsis:            XXX
category:            Language
description:         
  XXX

build-type:          Simple
cabal-version:       >= 1.2

executable           sl
  main-is:           Sl.hs
  build-depends:     base, containers, array, regex-compat,
                     tlaplus, tlaplus-eval, parsec >= 3.0.1
  other-modules:     Lexer Parser ExprHelper SLA TraceReader
  hs-source-dirs:    src
  ghc-options:       -Wall
                     -fwarn-tabs
                     -fno-warn-missing-signatures
                     -fno-warn-name-shadowing
                     -fno-warn-unused-imports
  extensions:        BangPatterns
