name:                tlaplus-tests
version:             0.1

license:             MIT
license-file:        LICENSE

author:              Reto Kramer <kramer@acm.org>
maintainer:          kramer@acm.org
stability:           experimental
synopsis:            Tests for TLA+ AST, parser, and pretty printer
category:            Language
description:
  Library to facilitate TLA+ processing in Haskell.
  For TLA+ information, please refer to http://www.lamport.org

build-type:          Simple
cabal-version:       >= 1.8
                     
executable           example-simple-expr
  main-is:           SimpleExpr.hs
  build-depends:     base >= 4, syb, tlaplus, tlaplus-eval, tlaplus-qq
  hs-source-dirs:    src/Examples
  ghc-options:       -Wall
                     -fwarn-tabs
                     -fno-warn-name-shadowing
                     -fno-warn-missing-signatures
                     -fno-warn-unused-matches
                     -fno-warn-unused-imports
  extensions:        QuasiQuotes

test-suite test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Test.hs
  build-depends:     base >= 4, tasty, tasty-hunit, syb, tlaplus, tlaplus-eval, tlaplus-qq
  ghc-options:       -Wall
                     -fwarn-tabs
                     -fno-warn-name-shadowing
                     -fno-warn-missing-signatures
                     -fno-warn-unused-matches
                     -fno-warn-unused-imports
  extensions:        QuasiQuotes
