name:                tlaplus
version:             0.1

license:             BSD3
license-file:        LICENSE

author:              Reto Kramer <kramer@acm.org>
maintainer:          kramer@acm.org
stability:           experimental
synopsis:            TLA+ AST, parser and pretty printer
category:            Language
description:         
  Library to facilitate TLA+ processing in Haskell. 
  For TLA+ information, please refer to http://www.lamport.org

build-type:          Simple
cabal-version:       >= 1.2

library
  exposed-modules:   Language.TLAPlus.Syntax
                     Language.TLAPlus.Pretty
                     Language.TLAPlus.Parser

  build-depends:     base >= 4, haskell98, syb, containers, wl-pprint,
                     parsec >= 3.0.1
  hs-source-dirs:    src
  other-modules:     Language.TLAPlus.ParserState
  ghc-options:       -Wall
                     -fwarn-tabs
                     -fno-warn-missing-signatures
                     -fno-warn-name-shadowing
                     -fno-warn-unused-imports
  extensions:        DeriveDataTypeable

